--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 <body class="webpage">
 		<div class = "header-main">
 
-
-
 			<div id="cornellBranding">
 				<a href="https://www.cornell.edu/">
 					<img src="images\cornellSeal2.svg">
@@ -31,9 +29,9 @@
 			</div>
 
 			<nav id="navigation-bar">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="aboutme.html">About Me</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="index">Home</a></li>
+					<li><a href="aboutme">About Me</a></li>
+					<li><a href="gallery">Gallery</a></li>
 
 			</nav>
 
