--- a/gallery.html
+++ b/gallery.html
@@ -27,9 +27,10 @@
 		</div>
 
 		<nav id="navigation-bar">
-				<li><a href="index">Home</a></li>
-				<li><a href="aboutme">About Me</a></li>
-				<li><a href="gallery">Gallery</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="aboutme.html">About Me</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="resume.html">Resume</a></li>
 
 		</nav>
 
