fixed github link

--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
 				</a>
 			</li>
 			<li>
-				<a class="social-media-links"	href="https://github.com/luislondono-co">
+				<a class="social-media-links"	href="https://github.com/luislondono">
 						<img src="images/github.svg">
 				</a>
 			</li>
