--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@
 				</a>
 			</li>
 			<li>
-				<a class="social-media-links"	href="https://github.com/luislondono-co">
+				<a class="social-media-links"	href="https://github.com/luislondono">
 						<img src="images/github.svg">
 				</a>
 			</li>
