--- a/aboutme.html
+++ b/aboutme.html
@@ -11,98 +11,72 @@
 
 
 <body class="webpage">
-	<div class = "header-main">
+	<div class="webpage-content-box">
+		<div class = "header-main">
+
+			<div class="my-logo">
+				Luis Londoño Ramos
+			</div>
+
+
+			<div id="navigation-bar">
+					<a class="button" href="index.html">Home</a>
+					<a class="button" href="aboutme.html">About Me</a>
+					<a class="button" href="gallery.html">Gallery</a>
+					<a class="button" href="resume.html">Résumé</a>
+
+			</div>
+
+
+			<div id="social-media-bar">
+					<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
+						<img src="images/instagramLogo.svg">
+					</a>
+
+					<a class="social-media-links"	href="https://github.com/luislondono">
+							<img src="images/github.svg">
+					</a>
+
+					<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
+						<img src="images/linkedinLogo.svg">
+					</a>
+
+			</div>
 
 
 
+		</div>
+
+		<div class= "page-title-container">
+			<h1> About Me
+			</h1>
+		</div>
+
+
+
+
+	</div>
+	
+	<div class= "title-background-image">
+			<img src="images/sasaimaPano.JPG">
+	</div>
+
+	<div class="footer">
 		<div id="cornellBranding">
-
 			<a href="https://www.cornell.edu/">
-				<img src="images\cornellSeal2.svg">
+				<img src="images\cornellSealGray.png">
 			</a>
 
 			<a href="https://www.engineering.cornell.edu/">
 				<img src="images\cornellEngineeringLogo.svg">
 			</a>
 		</div>
-
-		<nav id="navigation-bar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="aboutme.html">About Me</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="resume.html">Resume</a></li>
-
-		</nav>
-
-
-		<nav id="social-media-bar">
-			<li>
-				<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
-					<img src="images/instagramLogo.svg">
-				</a>
-			</li>
-			<li>
-				<a class="social-media-links"	href="https://github.com/luislondono">
-						<img src="images/github.svg">
-				</a>
-			</li>
-			<li>
-				<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
-					<img src="images/linkedinLogo.svg">
-				</a>
-			</li>
-		</nav>
-
-
-
-	</div>
-
-	<br>
-
-	<div class= "page-title-container">
-		<h1> About Me
-		</h1>
-	</div>
-
-	<figure>
-		<img src="images/sasaimaPano.JPG", class="title-background-image">
-	</figure>
-
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-	<div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-	</div>
-
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-	<div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-	</div>
-
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-	<div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-	</div>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-	<div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-	</div>
-
-
-
-	<div class="footer-container">
-		<footer>
 		<p> Copyright &copy; 2018 Luis Londono </p>
-		</footer>
 	</div>
+
+
+
+
 
 
 
