--- a/gallery.html
+++ b/gallery.html
@@ -12,258 +12,264 @@
 
 
 <body class="webpage">
-	<div class = "header-main">
+	<div class="webpage-content-box">
+		<div class = "header-main">
 
+			<div class="my-logo">
+				Luis Londoño Ramos
+			</div>
+
+
+			<div id="navigation-bar">
+					<a class="button" href="index.html">Home</a>
+					<a class="button" href="aboutme.html">About Me</a>
+					<a class="button" href="gallery.html">Gallery</a>
+					<a class="button" href="resume.html">Résumé</a>
+
+			</div>
+
+
+			<div id="social-media-bar">
+					<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
+						<img src="images/instagramLogo.svg">
+					</a>
+
+					<a class="social-media-links"	href="https://github.com/luislondono">
+							<img src="images/github.svg">
+					</a>
+
+					<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
+						<img src="images/linkedinLogo.svg">
+					</a>
+
+			</div>
+
+
+
+		</div>
+
+		<div class= "page-title-container">
+			<h1> Gallery</h1>
+		</div>
+
+		<div class="gallery-container">
+				<figure class="gallery-tile-portrait">
+					<img src="images/gallery/dadAndMeClockTower.jpg" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							My Dad & Me
+						</div>
+						<div class="gallery-tile-description-caption">
+							This was taken the last day of my freshman year by my mom.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-portrait">
+					<img src="images/gallery/momAndMeClocktower.jpg" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							My Mom & Me
+						</div>
+						<div class="gallery-tile-description-caption">
+							This was taken the last day of my freshman year by my dad. Same picture as before, there just wasn't anyone there to take a picture of all of us.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-portrait">
+					<img src="images/gallery/goldyPuppy.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Baby Goldy
+						</div>
+						<div class="gallery-tile-description-caption">
+							One of the oldest pictures I have of Goldy as a pup. Her stare was profound, as always.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-portrait">
+					<img src="images/gallery/luna.png" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Luna Smiling
+						</div>
+						<div class="gallery-tile-description-caption">
+							This was taken by my sister after taking her for a walk. She's about 4 months old here!
+						</div>
+					</figcaption>
+				</figure>
+
+
+				<figure class="gallery-tile-portrait">
+					<img src="images/gallery/chemLab.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Chem 2150 Lab
+						</div>
+						<div class="gallery-tile-description-caption">
+							Possibly the most frustrating lab I've ever been in. Made me want to quit chem- but the squat was on point.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-portrait">
+					<img src="images/gallery/fortTottenCloseUp.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Me & my Buddies by Fort Totten
+						</div>
+						<div class="gallery-tile-description-caption">
+							Anastasios's cousins took this. Tim posted it to the gram before me so that's why it's here. My zipper is undone and the resolution is off but it made its way onto my Tinder.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-portrait">
+					<img src="images/gallery/carrera26Portrait.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Carrera 26
+						</div>
+						<div class="gallery-tile-description-caption">
+							This was taken from Tia Flor's 14th floor apartment. It was a risky flick but worth it.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-portrait">
+					<img src="images/gallery/promStaircase.jpg" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Maddy's Prom Staircase
+						</div>
+						<div class="gallery-tile-description-caption">
+							Taken by someone's parent- this was awkward but I looked like a wholesome lad. Didn't have a date but still killed it.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-landscape">
+					<img src="images/gallery/fortTottenFarOut.jpg" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Fort Totten Shoot
+						</div>
+						<div class="gallery-tile-description-caption">
+							This pose was a little weird, but it made the cut.
+						</div>
+					</figcaption>
+				</figure>
+
+
+
+
+				<figure class="gallery-tile-landscape">
+					<img src="images/gallery/valentinaFusaThumbsUp.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Valentina's look of Approval
+						</div>
+						<div class="gallery-tile-description-caption">
+							Taken in Valentina's family member's house in Fusagasuga.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-landscape">
+					<img src="images/gallery/valentinaJuliaSaraFusa.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Valentina, Julia & Sara
+						</div>
+						<div class="gallery-tile-description-caption">
+							Beautiful town, Beautiful day, Beautiful people.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-landscape">
+					<img src="images/gallery/shpeSnowtubing1.jpg" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							SHPE Snowtubing Outing
+						</div>
+						<div class="gallery-tile-description-caption">
+							Jesse, Dani, Tania, Me and Luis Verdi had a great outing. Was a spontaneous decision that paved the way for the creation of incredible friendships during freshman year.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-landscape">
+					<img src="images/gallery/alpinaSitting.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							La Cabaña Alpina
+						</div>
+						<div class="gallery-tile-description-caption">
+							This was taken by Valentina's mom Claudia. We ate well that day and bantered a lot. This was in Sopó.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-landscape">
+					<img src="images/gallery/brandyAsleepComingFromFusa.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Brandy Asleep
+						</div>
+						<div class="gallery-tile-description-caption">
+							Finally a lapse in hyperactivity.
+						</div>
+					</figcaption>
+				</figure>
+
+
+				<figure class="gallery-tile-landscape">
+					<img src="images/gallery/lulBBQ.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							LuL at Orientation BBQ
+						</div>
+						<div class="gallery-tile-description-caption">
+							The fraternity in 2017.
+						</div>
+					</figcaption>
+				</figure>
+
+				<figure class="gallery-tile-landscape">
+					<img src="images/gallery/saritaCapital.JPG" class="gallery-tile-image">
+					<figcaption class="gallery-tile-description">
+						<div class="gallery-tile-description-title">
+							Sarita
+						</div>
+						<div class="gallery-tile-description-caption">
+							A big mood.
+						</div>
+					</figcaption>
+				</figure>
+
+			</div>
+
+	</div>
+
+	<div class= "title-background-image">
+			<img src="images/chemBlackboard.JPG">
+	</div>
+
+	<div class="footer">
 		<div id="cornellBranding">
 			<a href="https://www.cornell.edu/">
-				<img src="images\cornellSeal2.svg">
+			<img src="images\cornellSealGray.png">
 			</a>
 
 			<a href="https://www.engineering.cornell.edu/">
-				<img src="images\cornellEngineeringLogo.svg">
+			<img src="images\cornellEngineeringLogo.svg">
 			</a>
 		</div>
-
-		<nav id="navigation-bar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="aboutme.html">About Me</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="resume.html">Resume</a></li>
-
-		</nav>
-
-
-		<nav id="social-media-bar">
-			<li>
-				<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
-					<img src="images/instagramLogo.svg">
-				</a>
-			</li>
-			<li>
-				<a class="social-media-links"	href="https://github.com/luislondono">
-						<img src="images/github.svg">
-				</a>
-			</li>
-			<li>
-				<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
-					<img src="images/linkedinLogo.svg">
-				</a>
-			</li>
-		</nav>
-
-
-
-	</div>
-
-	<div class= "page-title-container">
-		<h1> Gallery
-		</h1>
-	</div>
-
-
-		<div class="gallery-container">
-			<figure class="gallery-tile">
-				<img src="images/gallery/dadAndMeClockTower.jpg" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						My Dad & Me
-					</div>
-					<div class="gallery-tile-description-caption">
-						This was taken the last day of my freshman year by my mom.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/luna.png" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Luna Smiling
-					</div>
-					<div class="gallery-tile-description-caption">
-						This was taken by my sister after taking her for a walk. She's about 4 months old here!
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/momAndMeClocktower.jpg" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						My Mom & Me
-					</div>
-					<div class="gallery-tile-description-caption">
-						This was taken the last day of my freshman year by my dad. Same picture as before, there just wasn't anyone there to take a picture of all of us.
-					</div>
-				</figcaption>
-			</figure>
-
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/chemLab.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Chem 2150 Lab
-					</div>
-					<div class="gallery-tile-description-caption">
-						Possibly the most frustrating lab I've ever been in. Made me want to quit chem- but the squat was on point.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/fortTottenCloseUp.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Me & my Buddies by Fort Totten
-					</div>
-					<div class="gallery-tile-description-caption">
-						Anastasios's cousins took this. Tim posted it to the gram before me so that's why it's here. My zipper is undone and the resolution is off but it made its way onto my Tinder.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/fortTottenFarOut.jpg" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Fort Totten Shoot
-					</div>
-					<div class="gallery-tile-description-caption">
-						This pose was a little weird, but it made the cut.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/goldyPuppy.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Baby Goldy
-					</div>
-					<div class="gallery-tile-description-caption">
-						One of the oldest pictures I have of Goldy as a pup. Her stare was profound, as always.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/promStaircase.jpg" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Maddy's Prom Staircase
-					</div>
-					<div class="gallery-tile-description-caption">
-						Taken by someone's parent- this was awkward but I looked like a wholesome lad. Didn't have a date but still killed it.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/valentinaFusaThumbsUp.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Valentina's look of Approval
-					</div>
-					<div class="gallery-tile-description-caption">
-						Taken in Valentina's family member's house in Fusagasuga.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/valentinaJuliaSaraFusa.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Valentina, Julia & Sara
-					</div>
-					<div class="gallery-tile-description-caption">
-						Beautiful town, Beautiful day, Beautiful people.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/shpeSnowtubing1.jpg" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						SHPE Snowtubing Outing
-					</div>
-					<div class="gallery-tile-description-caption">
-						Jesse, Dani, Tania, Me and Luis Verdi had a great outing. Was a spontaneous decision that paved the way for the creation of incredible friendships during freshman year.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/alpinaSitting.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						La Cabaña Alpina
-					</div>
-					<div class="gallery-tile-description-caption">
-						This was taken by Valentina's mom Claudia. We ate well that day and bantered a lot. This was in Sopó.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/brandyAsleepComingFromFusa.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Brandy Asleep
-					</div>
-					<div class="gallery-tile-description-caption">
-						Finally a lapse in hyperactivity.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/carrera26Portrait.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Carrera 26
-					</div>
-					<div class="gallery-tile-description-caption">
-						This was taken from Tia Flor's 14th floor apartment. It was a risky flick but worth it.
-					</div>
-				</figcaption>
-			</figure>
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/lulBBQ.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						LuL at Orientation BBQ
-					</div>
-					<div class="gallery-tile-description-caption">
-						The fraternity in 2017.
-					</div>
-				</figcaption>
-			</figure>
-
-
-			<figure class="gallery-tile">
-				<img src="images/gallery/saritaCapital.JPG" class="gallery-tile-image">
-				<figcaption class="gallery-tile-description">
-					<div class="gallery-tile-description-title">
-						Sarita
-					</div>
-					<div class="gallery-tile-description-caption">
-						A big mood.
-					</div>
-				</figcaption>
-			</figure>
-
-		</div>
-
-
-
-		<footer class="footer-container">
 		<p> Copyright &copy; 2018 Luis Londono </p>
-		</footer>
-
+	</div>
 
 
 </body>
