--- a/index.html
+++ b/index.html
@@ -16,64 +16,73 @@
 
 
 <body class="webpage">
+
+	<div class="webpage-content-box">
 		<div class = "header-main">
 
-			<div id="cornellBranding">
-				<a href="https://www.cornell.edu/">
-					<img src="images\cornellSeal2.svg">
-				</a>
-
-				<a href="https://www.engineering.cornell.edu/">
-					<img src="images\cornellEngineeringLogo.svg">
-				</a>
+			<div class="my-logo">
+				Luis Londoño Ramos
 			</div>
 
-			<nav id="navigation-bar">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="aboutme.html">About Me</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="resume.html">Resume</a></li>
 
-			</nav>
+			<div id="navigation-bar">
+					<a class="button" href="index.html">Home</a>
+					<a class="button" href="aboutme.html">About Me</a>
+					<a class="button" href="gallery.html">Gallery</a>
+					<a class="button" href="resume.html">Résumé</a>
+
+			</div>
 
 
-			<nav id="social-media-bar">
-				<li>
+			<div id="social-media-bar">
 					<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
 						<img src="images/instagramLogo.svg">
 					</a>
-				</li>
-				<li>
+
 					<a class="social-media-links"	href="https://github.com/luislondono">
 							<img src="images/github.svg">
 					</a>
-				</li>
-				<li>
+
 					<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
 						<img src="images/linkedinLogo.svg">
 					</a>
-				</li>
-			</nav>
+
+			</div>
 
 
 
 		</div>
 
+		<div class= "page-title-container">
+			<h1> Home
+			</h1>
+		</div>
 
 		<div class="test-navigator">
-			<br>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
 		</div>
 
+	</div>
 
+	<div class= "title-background-image">
+			<img src="images/keetonBackyard.JPG">
+	</div>
 
+	<div class="footer">
+		<div id="cornellBranding">
+			<a href="https://www.cornell.edu/">
+				<img src="images\cornellSealGray.png">
+			</a>
 
-
-		<footer class="footer-container">
+			<a href="https://www.engineering.cornell.edu/">
+				<img src="images\cornellEngineeringLogo.svg">
+			</a>
+		</div>
 		<p> Copyright &copy; 2018 Luis Londono </p>
-		</footer>
+	</div>
 
-		</body>
+
+
+
+</body>
 
 </html>
