--- a/resume.html
+++ b/resume.html
@@ -4,158 +4,176 @@
 	<title>
 		Luis Londono
 	</title>
+	<!-- <link href="https://fonts.googleapis.com/css?family=Oxygen|PT+Sans|Poppins" rel="stylesheet"> -->
+	<!-- <link href="https://fonts.googleapis.com/css?family=Oxygen|Poppins" rel="stylesheet"> -->
+	<!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> -->
 	<link rel="stylesheet" type="text/css" href="CSS\styleMine.css">
 	<link rel= "shortcut icon" type="image/x-icon" href=
 	"images\cornellicon.ico">
-
-
-
 </head>
 
-
-
-
 <body class="webpage">
+	<div class="webpage-content-box">
+
 		<div class = "header-main">
 
-			<div id="cornellBranding">
-				<a href="https://www.cornell.edu/">
-					<img src="images\cornellSeal2.svg">
-				</a>
-
-				<a href="https://www.engineering.cornell.edu/">
-					<img src="images\cornellEngineeringLogo.svg">
-				</a>
+			<div class="my-logo">
+				Luis Londoño Ramos
 			</div>
 
-			<nav id="navigation-bar">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="aboutme.html">About Me</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="resume.html">Resume</a></li>
 
-			</nav>
+			<div id="navigation-bar">
+					<a class="button" href="index.html">Home</a>
+					<a class="button" href="aboutme.html">About Me</a>
+					<a class="button" href="gallery.html">Gallery</a>
+					<a class="button" href="resume.html">Résumé</a>
+
+			</div>
 
 
-			<nav id="social-media-bar">
-				<li>
+			<div id="social-media-bar">
 					<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
 						<img src="images/instagramLogo.svg">
 					</a>
-				</li>
-				<li>
+
 					<a class="social-media-links"	href="https://github.com/luislondono">
 							<img src="images/github.svg">
 					</a>
-				</li>
-				<li>
+
 					<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
 						<img src="images/linkedinLogo.svg">
 					</a>
-				</li>
-			</nav>
 
-</div>
+			</div>
 
-			<div class="resume">
-				<div class="resume-header">
-					<h1><a href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Luis Londono Ramos</a></h1>
-					<p><a href="mailto:lhl49@cornell.edu">lhl49@cornell.edu</a>
-				</div>
 
-				<div class="resume-body">
 
-					<div class="resume-subsection" id="Education">
-						<h1>Education:</h1>
+		</div>
 
-						<div class="resume-subsection-body">
-							<div class="resume-subsection-body-item">
-								<p><em>Cornell University, College of Engineering</em><span class="resume-date">Expected Graduation: May 2021</span></p>
+		<div class= "page-title-container">
+			<h1> Résumé</h1>
+		</div>
+
+
+		<div class="resume">
+			<div class="resume-header">
+				<h1><a href="https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing">Luis Londono Ramos</a></h1>
+				<p><a href="mailto:lhl49@cornell.edu">lhl49@cornell.edu</a>
+			</div>
+
+			<div class="resume-body">
+
+				<div class="resume-subsection" id="Education">
+					<h1>Education:</h1>
+
+					<div class="resume-subsection-body">
+						<div class="resume-subsection-body-item">
+							<p><em>Cornell University, College of Engineering</em><span class="resume-date">Expected Graduation: May 2021</span></p>
+							<div class="indented">
+								Bachelor of Science: <a href="http://www.orie.cornell.edu/academics/undergraduate/requirements.cfm">Operations Research and Engineering</a>
+								<p>Dyson Business Minor
+							</div>
+						</div>
+						<div class="resume-subsection-body-item">
+							Relevant Coursework: Multivariable Calculus, Linear Algebra, iOS	Development
+							<div style="padding-left:156px">
+							Honors Inorganic Chemistry, Python, OO Programming</p>
+							</div>
+						</div>
+
+
+						<div class="resume-subsection-body-item">
+							<p><em><a href="https://en.wikipedia.org/wiki/Hunter_College_High_School">Hunter College High School</a> – 93.8 GPA</em><span class="resume-date">Graduation: June 2017</span>
+							<p>74 94th St, NYC</p>
 								<div class="indented">
-									Bachelor of Science: <a href="http://www.orie.cornell.edu/academics/undergraduate/requirements.cfm">Operations Research and Engineering</a>
-									<p>Dyson Business Minor
+									National Hispanic Scholar
 								</div>
-							</div>
-							<div class="resume-subsection-body-item">
-								Relevant Coursework: Multivariable Calculus, Linear Algebra, iOS	Development
-								<div style="padding-left:156px">
-								Honors Inorganic Chemistry, Python, OO Programming</p>
-								</div>
-							</div>
-
-
-							<div class="resume-subsection-body-item">
-								<p><em><a href="https://en.wikipedia.org/wiki/Hunter_College_High_School">Hunter College High School</a> – 93.8 GPA</em><span class="resume-date">Graduation: June 2017</span>
-								<p>74 94th St, NYC</p>
-									<div class="indented">
-										National Hispanic Scholar
-									</div>
-							</div>
-
-							<div class="resume-subsection-body-item">
-								<p><em><a href="https://www.nymathcircle.org/about-us">Math Circle-</a><a href="https://en.wikipedia.org/wiki/Courant_Institute_of_Mathematical_Sciences">NYU Courant Institute </a></em> <span class="resume-date">June 2014 – 2015</span></p>
-							</div>
-
-
 						</div>
-					</div>
 
-					<div class="resume-subsection" id="Experience">
-						<h1>Experience:</h1>
-						<div class="resume-subsection-body">
-							<div class="resume-subsection-body-item">
-								<em><a href="http://shpe.cornell.edu/eboard.html">Society of Hispanic Professional Engineers Secretary &amp; Rep</a></em><span class="resume-date">Sept. 2017 –Present</span></p>
-								<ul class="disc-list">
-									<li>Responsible for underclassman outreach: consistently advertising organization
-										<p>events: corporate, recreational, and professional development.</p></li>
-								</ul>
-							</div>
-
-							<div class="resume-subsection-body-item">
-								<em>Cornell Engineering Summer Program Assistant</em><span class="resume-date">June - August 2018</span></p>
-								<ul class="disc-list">
-									<li>Assisted in a six-week summer program for pre-freshmen students intended to
-										 <p>help acclimate them to an engineering curriculum. Helped a cohort of 30+ kids learn</p>
-										 <p> introductory-level Python.</p></li>
-								</ul>
-							</div>
-
-							<div class="resume-subsection-body-item">
-								<em>Dyson Research Assistant</em><span class="resume-date">June 2018 - Present</span></p>
-								<ul class="disc-list">
-									<li>Worked under Professor Glen Dowell studying the sustainability of
-										<p>corporations and their environmental performance.</p>
-										<ul>
-											<li>Utilized D&B API to optimize the collection of data for a variety of
-											<p>international companies.</li>
-										</ul>
-								</ul>
-							</div>
-
-							<div class="resume-subsection-body-item">
-								<em>Governor’s Island Interpreter </em><span class="resume-date">June 2016-June 2017</span></p>
-								<ul class="disc-list">
-									<li>Assisted Park Rangers in maintaining the historical sector of the island and
-									<p>served as a tour guide for the island’s 2000 daily visitors. </li>
-								</ul>
-							</div>
+						<div class="resume-subsection-body-item">
+							<p><em><a href="https://www.nymathcircle.org/about-us">Math Circle-</a><a href="https://en.wikipedia.org/wiki/Courant_Institute_of_Mathematical_Sciences">NYU Courant Institute </a></em> <span class="resume-date">June 2014 – 2015</span></p>
 						</div>
-					</div>
 
-					<div class="resume-subsection" id="Skills">
-						<h1>Skills:</h1>
-						<div class="resume-subsection-body">
-							<div class="resume-subsection-body-item">
-								<ul>
-									<li>Fluent in Spanish.</li>
-									<li>Proficient in HTML, CSS, Javascript, Python, Java, Swift, LaTeX.</li>
-									<li>Background in leadership and teamwork.</li>
-									<li>Dependable, coordinated and organized.</li>
-								</ul>
-							</div>
+
+					</div>
+				</div>
+
+				<div class="resume-subsection" id="Experience">
+					<h1>Experience:</h1>
+					<div class="resume-subsection-body">
+						<div class="resume-subsection-body-item">
+							<em><a href="http://shpe.cornell.edu/eboard.html">Society of Hispanic Professional Engineers Secretary &amp; Rep</a></em><span class="resume-date">Sept. 2017 –Present</span></p>
+							<ul class="disc-list">
+								<li>Responsible for underclassman outreach: consistently advertising organization
+									<p>events: corporate, recreational, and professional development.</p></li>
+							</ul>
+						</div>
+
+						<div class="resume-subsection-body-item">
+							<em>Cornell Engineering Summer Program Assistant</em><span class="resume-date">June - August 2018</span></p>
+							<ul class="disc-list">
+								<li>Assisted in a six-week summer program for pre-freshmen students intended to
+									 <p>help acclimate them to an engineering curriculum. Helped a cohort of 30+ kids learn</p>
+									 <p> introductory-level Python.</p></li>
+							</ul>
+						</div>
+
+						<div class="resume-subsection-body-item">
+							<em>Dyson Research Assistant</em><span class="resume-date">June 2018 - Present</span></p>
+							<ul class="disc-list">
+								<li>Worked under Professor Glen Dowell studying the sustainability of
+									<p>corporations and their environmental performance.</p>
+									<ul>
+										<li>Utilized D&B API to optimize the collection of data for a variety of
+										<p>international companies.</li>
+									</ul>
+							</ul>
+						</div>
+
+						<div class="resume-subsection-body-item">
+							<em>Governor’s Island Interpreter </em><span class="resume-date">June 2016-June 2017</span></p>
+							<ul class="disc-list">
+								<li>Assisted Park Rangers in maintaining the historical sector of the island and
+								<p>served as a tour guide for the island’s 2000 daily visitors. </li>
+							</ul>
 						</div>
 					</div>
 				</div>
 
+				<div class="resume-subsection" id="Skills">
+					<h1>Skills:</h1>
+					<div class="resume-subsection-body">
+						<div class="resume-subsection-body-item">
+							<ul>
+								<li>Fluent in Spanish.</li>
+								<li>Proficient in HTML, CSS, Javascript, Python, Java, Swift, LaTeX.</li>
+								<li>Dependable, coordinated and organized.</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<div class= "title-background-image">
+			<img src="images/sasaimaWaterDamage.JPG">
+	</div>
+
+	<div class="footer">
+		<div id="cornellBranding">
+			<a href="https://www.cornell.edu/">
+			<img src="images\cornellSealGray.png">
+			</a>
+
+			<a href="https://www.engineering.cornell.edu/">
+				<img src="images\cornellEngineeringLogo.svg">
+			</a>
+		</div>
+
+		<p> Copyright &copy; 2018 Luis Londono </p>
+	</div>
 </body>
+
 </html>
