--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</div>
 
 	<div class= "title-background-image">
-			<img src="images/keetonBackyard.JPG">
+			<img src="images/keetonBackyard.jpg">
 	</div>
 
 	<div class="footer">
