--- a/gallery.html
+++ b/gallery.html
@@ -255,7 +255,7 @@
 	</div>
 
 	<div class= "title-background-image">
-			<img src="images/chemBlackboard.JPG">
+			<img src="images/chemBlackboard.jpg">
 	</div>
 
 	<div class="footer">
