--- a/aboutme.html
+++ b/aboutme.html
@@ -56,9 +56,9 @@
 
 
 	</div>
-	
+
 	<div class= "title-background-image">
-			<img src="images/sasaimaPano.JPG">
+			<img src="images/sasaimaPano.jpg">
 	</div>
 
 	<div class="footer">
