--- a/gallery.html
+++ b/gallery.html
@@ -52,211 +52,303 @@
 			<h1> Gallery</h1>
 		</div>
 
-		<div class="gallery-container">
-				<figure class="gallery-tile-portrait">
-					<img src="images/gallery/dadAndMeClockTower.jpg" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							My Dad & Me
-						</div>
-						<div class="gallery-tile-description-caption">
-							This was taken the last day of my freshman year by my mom.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-portrait">
-					<img src="images/gallery/momAndMeClocktower.jpg" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							My Mom & Me
-						</div>
-						<div class="gallery-tile-description-caption">
-							This was taken the last day of my freshman year by my dad. Same picture as before, there just wasn't anyone there to take a picture of all of us.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-portrait">
-					<img src="images/gallery/goldyPuppy.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Baby Goldy
-						</div>
-						<div class="gallery-tile-description-caption">
-							One of the oldest pictures I have of Goldy as a pup. Her stare was profound, as always.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-portrait">
-					<img src="images/gallery/luna.png" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Luna Smiling
-						</div>
-						<div class="gallery-tile-description-caption">
-							This was taken by my sister after taking her for a walk. She's about 4 months old here!
-						</div>
-					</figcaption>
-				</figure>
-
-
-				<figure class="gallery-tile-portrait">
-					<img src="images/gallery/chemLab.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Chem 2150 Lab
-						</div>
-						<div class="gallery-tile-description-caption">
-							Possibly the most frustrating lab I've ever been in. Made me want to quit chem- but the squat was on point.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-portrait">
-					<img src="images/gallery/fortTottenCloseUp.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Me & my Buddies by Fort Totten
-						</div>
-						<div class="gallery-tile-description-caption">
-							Anastasios's cousins took this. Tim posted it to the gram before me so that's why it's here. My zipper is undone and the resolution is off but it made its way onto my Tinder.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-portrait">
-					<img src="images/gallery/carrera26Portrait.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Carrera 26
-						</div>
-						<div class="gallery-tile-description-caption">
-							This was taken from Tia Flor's 14th floor apartment. It was a risky flick but worth it.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-portrait">
-					<img src="images/gallery/promStaircase.jpg" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Maddy's Prom Staircase
-						</div>
-						<div class="gallery-tile-description-caption">
-							Taken by someone's parent- this was awkward but I looked like a wholesome lad. Didn't have a date but still killed it.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-landscape">
-					<img src="images/gallery/fortTottenFarOut.jpg" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Fort Totten Shoot
-						</div>
-						<div class="gallery-tile-description-caption">
-							This pose was a little weird, but it made the cut.
-						</div>
-					</figcaption>
-				</figure>
-
-
-
-
-				<figure class="gallery-tile-landscape">
-					<img src="images/gallery/valentinaFusaThumbsUp.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Valentina's look of Approval
-						</div>
-						<div class="gallery-tile-description-caption">
-							Taken in Valentina's family member's house in Fusagasuga.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-landscape">
-					<img src="images/gallery/valentinaJuliaSaraFusa.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Valentina, Julia & Sara
-						</div>
-						<div class="gallery-tile-description-caption">
-							Beautiful town, Beautiful day, Beautiful people.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-landscape">
-					<img src="images/gallery/shpeSnowtubing1.jpg" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							SHPE Snowtubing Outing
-						</div>
-						<div class="gallery-tile-description-caption">
-							Jesse, Dani, Tania, Me and Luis Verdi had a great outing. Was a spontaneous decision that paved the way for the creation of incredible friendships during freshman year.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-landscape">
-					<img src="images/gallery/alpinaSitting.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							La Cabaña Alpina
-						</div>
-						<div class="gallery-tile-description-caption">
-							This was taken by Valentina's mom Claudia. We ate well that day and bantered a lot. This was in Sopó.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-landscape">
-					<img src="images/gallery/brandyAsleepComingFromFusa.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Brandy Asleep
-						</div>
-						<div class="gallery-tile-description-caption">
-							Finally a lapse in hyperactivity.
-						</div>
-					</figcaption>
-				</figure>
-
-
-				<figure class="gallery-tile-landscape">
-					<img src="images/gallery/lulBBQ.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							LuL at Orientation BBQ
-						</div>
-						<div class="gallery-tile-description-caption">
-							The fraternity in 2017.
-						</div>
-					</figcaption>
-				</figure>
-
-				<figure class="gallery-tile-landscape">
-					<img src="images/gallery/saritaCapital.JPG" class="gallery-tile-image">
-					<figcaption class="gallery-tile-description">
-						<div class="gallery-tile-description-title">
-							Sarita
-						</div>
-						<div class="gallery-tile-description-caption">
-							A big mood.
-						</div>
-					</figcaption>
-				</figure>
-
-			</div>
 
 	</div>
+
+
 
 	<div class= "title-background-image">
-			<img src="images/chemBlackboard.JPG">
+			<img src="images/chemBlackboard.jpg">
 	</div>
+
+	<div class="gallery-container">
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/dadAndMeClockTower.jpg" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						My Dad & Me
+					</div>
+					<div class="gallery-tile-description-caption">
+						This was taken the last day of my freshman year by my mom.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/meAndClockTower.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Me
+					</div>
+					<div class="gallery-tile-description-caption">
+						First day on campus.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/momAndMeClocktower.jpg" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						My Mom & Me
+					</div>
+					<div class="gallery-tile-description-caption">
+						This was taken the last day of my freshman year by my dad. Same picture as before, there just wasn't anyone there to take a picture of all of us.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/goldyPuppy.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Baby Goldy
+					</div>
+					<div class="gallery-tile-description-caption">
+						One of the oldest pictures I have of Goldy as a pup.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/lunaAndMe.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Luna, 3-months
+					</div>
+					<div class="gallery-tile-description-caption">
+						<!--  Empty-->
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/luna.png" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Luna Smiling
+					</div>
+					<div class="gallery-tile-description-caption">
+						This was taken by my sister after taking her for a walk. She's about 4 months old here!
+					</div>
+				</figcaption>
+			</figure>
+
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/chemLab.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Chem 2150 Lab
+					</div>
+					<div class="gallery-tile-description-caption">
+						Possibly the most frustrating lab I've ever been in.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/fortTottenCloseUp.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						@ Fort Totten
+					</div>
+					<div class="gallery-tile-description-caption">
+						Taken off <a href="https://www.instagram.com/timmy_z_c/"> Tim's Instagram</a>.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/carrera26Portrait.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Carrera 26 facing West
+					</div>
+					<div class="gallery-tile-description-caption">
+						This was taken from my Tia Flor's 14th floor apartment.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/promStaircase.jpg" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Maddy's Prom Staircase
+					</div>
+					<div class="gallery-tile-description-caption">
+						So much blue.
+					</div>
+				</figcaption>
+			</figure>
+
+
+
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/fortTottenFarOut.jpg" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Fort Totten Shoot
+					</div>
+					<div class="gallery-tile-description-caption">
+						Same pic as above, just landscape.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-portrait">
+				<img src="images/gallery/alpinaStanding.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						La Cabaña
+					</div>
+					<div class="gallery-tile-description-caption">
+						<!--  Empty-->
+					</div>
+				</figcaption>
+			</figure>
+
+
+
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/valentinaFusaThumbsUp.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Valentina's look of Approval
+					</div>
+					<div class="gallery-tile-description-caption">
+						Taken in Fusagasuga.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/valentinaJuliaSaraFusa.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Valentina, Julia & Sara
+					</div>
+					<div class="gallery-tile-description-caption">
+						Taken by me.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/shpeSnowtubing1.jpg" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						SHPE Snowtubing Outing
+					</div>
+					<div class="gallery-tile-description-caption">
+						Jesse, Dani, Tania, Me and Luis Verdi @ Greek Peak.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/alpinaSitting.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						La Cabaña Alpina
+					</div>
+					<div class="gallery-tile-description-caption">
+						Taken by Tia/Prima Claudia in Sopó.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/brandyAsleepComingFromFusa.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Brandy Asleep
+					</div>
+					<div class="gallery-tile-description-caption">
+						Finally a lapse in hyperactivity.
+					</div>
+				</figcaption>
+			</figure>
+
+
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/dianaCarmenElisaMamaRosalba.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						La Vaca que Rie
+					</div>
+					<div class="gallery-tile-description-caption">
+						La prima Diana, Tia Carmen Elisa, ama and Tia Rosalba.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/davidRafaCamilo.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						La Vaca que Rie
+					</div>
+					<div class="gallery-tile-description-caption">
+						El primo David, Tio Rafa & Camilo.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/lulBBQ.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						LuL at Orientation BBQ
+					</div>
+					<div class="gallery-tile-description-caption">
+						The fraternity in 2017.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/sasaimaStreetDog.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Sasaima Plaza
+					</div>
+					<div class="gallery-tile-description-caption">
+						In the main plaza with Tio Mario's dog named Key.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/tiasPedroHouse.jpg" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Tias & Diana
+					</div>
+					<div class="gallery-tile-description-caption">
+						In front of Tio Pedro's house.
+					</div>
+				</figcaption>
+			</figure>
+
+			<figure class="gallery-tile-landscape">
+				<img src="images/gallery/saritaCapital.JPG" class="gallery-tile-image">
+				<figcaption class="gallery-tile-description">
+					<div class="gallery-tile-description-title">
+						Sarita
+					</div>
+					<div class="gallery-tile-description-caption">
+						A big mood.
+					</div>
+				</figcaption>
+			</figure>
+
+		</div>
+
 
 	<div class="footer">
 		<div id="cornellBranding">
