--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
 			</h1>
 		</div>
 
-		<div class="test-navigator">
-		</div>
-
 	</div>
 
 	<div class= "title-background-image">
-			<img src="images/keetonBackyard.JPG">
+			<img src="images/williardStraightSunset.jpg">
 	</div>
 
 	<div class="footer">
