--- a/resume.html
+++ b/resume.html
@@ -158,7 +158,7 @@
 	</div>
 
 	<div class= "title-background-image">
-			<img src="images/sasaimaWaterDamage.JPG">
+			<img src="images/sasaimaWaterDamage.jpg">
 	</div>
 
 	<div class="footer">
