testing url rewrite

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 
 			<div id="navigation-bar">
-					<a class="button" href="index.html">Home</a>
-					<a class="button" href="aboutme.html">About Me</a>
-					<a class="button" href="gallery.html">Gallery</a>
-					<a class="button" href="resume.html">Résumé</a>
+					<a class="button" href="index">Home</a>
+					<a class="button" href="aboutme">About Me</a>
+					<a class="button" href="gallery">Gallery</a>
+					<a class="button" href="resume">Résumé</a>
 
 			</div>
 
@@ -61,11 +61,7 @@
 	</div>
 
 	<div class= "title-background-image">
-<<<<<<< HEAD
 			<img src="images/williardStraightSunset.jpg">
-=======
-			<img src="images/keetonBackyard.jpg">
->>>>>>> 8789f3f6a2cb71401a716335978b79e5bf6971a6
 	</div>
 
 	<div class="footer">
