--- a/resume.html
+++ b/resume.html
@@ -23,10 +23,10 @@
 
 
 			<div id="navigation-bar">
-					<a class="button" href="index.html">Home</a>
-					<a class="button" href="aboutme.html">About Me</a>
-					<a class="button" href="gallery.html">Gallery</a>
-					<a class="button" href="resume.html">Résumé</a>
+					<a class="button" href="index">Home</a>
+					<a class="button" href="aboutme">About Me</a>
+					<a class="button" href="gallery">Gallery</a>
+					<a class="button" href="resume">Résumé</a>
 
 			</div>
 
