--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,7 @@
 	</div>
 
 	<div class= "title-background-image">
-			<img src="images/sasaimaPano.jpg">
+			<img src="images/sasaimaPano.JPG">
 	</div>
 
 	<div class="footer">
