--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
 				</figcaption>
 			</figure>
 
-			<figure class="gallery-tile-portrait">
+			<!-- <figure class="gallery-tile-portrait">
 				<img src="images/gallery/meAndClockTower.JPG" class="gallery-tile-image">
 				<figcaption class="gallery-tile-description">
 					<div class="gallery-tile-description-title">
@@ -84,7 +84,7 @@
 						First day on campus.
 					</div>
 				</figcaption>
-			</figure>
+			</figure> -->
 
 			<figure class="gallery-tile-portrait">
 				<img src="images/gallery/momAndMeClocktower.jpg" class="gallery-tile-image">
@@ -324,7 +324,7 @@
 			</figure>
 
 			<figure class="gallery-tile-landscape">
-				<img src="images/gallery/tiasPedroHouse.jpg" class="gallery-tile-image">
+				<img src="images/gallery/tiasPedroHouse.JPG" class="gallery-tile-image">
 				<figcaption class="gallery-tile-description">
 					<div class="gallery-tile-description-title">
 						Tias & Diana
