--- a/gallery.html
+++ b/gallery.html
@@ -111,7 +111,7 @@
 			</figure>
 
 			<figure class="gallery-tile-portrait">
-				<img src="images/gallery/lunaAndMe.JPG" class="gallery-tile-image">
+				<img src="images/gallery/lunaAndMe.jpg" class="gallery-tile-image">
 				<figcaption class="gallery-tile-description">
 					<div class="gallery-tile-description-title">
 						Luna, 3-months
