changed to myWork

--- a/myWork.html
+++ b/myWork.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>
-		About Luis
+		Luis' Work
 	</title>
 	<link rel="stylesheet" type="text/css" href="CSS\styleMine.css">
 	<link rel= "shortcut icon" type="image/x-icon" href=
@@ -21,7 +21,7 @@
 
 			<div id="navigation-bar">
 					<a class="button" href="index">Home</a>
-					<a class="button" href="aboutme">About Me</a>
+					<a class="button" href="myWork">My Work</a>
 					<a class="button" href="gallery">Gallery</a>
 					<a class="button" href="resume">Résumé</a>
 
