--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
 
 			<div id="navigation-bar">
 					<a class="button" href="index">Home</a>
-					<a class="button" href="aboutme">About Me</a>
+					<a class="button" href="myWork">My Work</a>
 					<a class="button" href="gallery">Gallery</a>
 					<a class="button" href="resume">Résumé</a>
 
