--- a/myWork.html
+++ b/myWork.html
@@ -260,7 +260,7 @@
 	</div>
 
 	<div class= "title-background-image">
-			<img src="images/sasaimaPano.JPG">
+			<img src= "images/williardStraightSunset.jpg">
 	</div>
 
 	<div class="footer">
