--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</div>
 
 	<div class= "title-background-image">
-			<img src="images/williardStraightSunset.jpg">
+			<img src="images/sasaimaPano.JPG">
 	</div>
 
 	<div class="footer">
