redesigning new pages

--- a/index.html
+++ b/index.html
@@ -54,9 +54,16 @@
 		</div>
 
 		<div class= "page-title-container">
-			<h1> Home
+			<h1> Welcome
 			</h1>
 		</div>
+
+		<div class="personal-portrait-1">
+			<img src="images\gallery\luisPortrait.jpg" alt="">
+		</div>
+
+
+
 
 	</div>
 
