--- a/lulalphachapter.html
+++ b/lulalphachapter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>
-		Luis's Resume
+		ΛΥΛ
 	</title>
 	<!-- <link href="https://fonts.googleapis.com/css?family=Oxygen|PT+Sans|Poppins" rel="stylesheet"> -->
 	<!-- <link href="https://fonts.googleapis.com/css?family=Oxygen|Poppins" rel="stylesheet"> -->
