--- a/lulalphachapter/lulHistory.html
+++ b/lulalphachapter/lulHistory.html
@@ -7,6 +7,8 @@
 		</title>
 		<link rel="stylesheet" type="text/css" href="CSS\lulStyle.css">
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+		<link rel= "shortcut icon" type="image/x-icon" href=
+		"assets/lulicon.ico">
 
 	</head>
 	<body class="webpage">
