--- a/lulalphachapter/lulalphachapter.html
+++ b/lulalphachapter/lulalphachapter.html
@@ -7,6 +7,10 @@
 		</title>
 		<link rel="stylesheet" type="text/css" href="CSS\lulStyle.css">
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+		<link rel= "shortcut icon" type="image/x-icon" href=
+		"assets/lulgoldicon.ico">
+		<link rel= "shortcut icon" type="image/x-icon" href=
+		"assets/lulgoldicon.ico">
 
 	</head>
 	<body class="webpage">
