temp removed portrait

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 			</h1>
 		</div>
 
-		<div class="personal-portrait-1">
+		<!-- <div class="personal-portrait-1">
 			<img src="images\gallery\luisPortrait.jpg" alt="">
-		</div>
+		</div> -->
 
 
 
