big changes to index

--- a/index.html
+++ b/index.html
@@ -1,92 +1,62 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>
-		Luis Londono
-	</title>
-	<link rel="stylesheet" type="text/css" href="CSS\styleMine.css">
-	<link rel= "shortcut icon" type="image/x-icon" href=
-	"images\cornellicon.ico">
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Luis Londono</title>
+		<link rel="stylesheet" href="CSS/main.css">
+	</head>
+	<body class="page">
+
+		<header>
+      <div class="navbar-container">
+        <div class="navbar-logo">
+          <a href="index2.html">Luis Hernando Londono</a>
+        </div>
 
 
+        <nav>
+          <ul>
+            <li><a class="nav-link" href="index.html">Home</a></li>
+            <li><a class="nav-link" href="resume.html">Resume</a></li>
+            <li><a class="nav-link" href="team.html">My Work</a></li>
 
-</head>
+          </ul>
+        </nav>
 
+        </div>
 
+    </header>
 
+		<div class="page-content">
 
-<body class="webpage">
+			<h1>About Me</h1>
+			<div class="portrait-container">
+				<div class="circular-portrait">
+					<img src="images/shpeHeadshot2018.jpg" alt="">
+				</div>
+			</div>
 
-	<div class="webpage-content-box">
-		<div class = "header-main">
+			<div class="aboutme-container">
+				<h3> Welcome to my Website!</h3>
+				<hr>
+				<p> My name is Luis and I am sophomore computer science student at Cornell University with minors in Operations Research and Business. I am interested in mobile & frontend app development and data analytics and I am currently looking for summer internships to explore these interests. </p>
 
-			<div class="my-logo">
-				Luis Londoño Ramos
+				<p> Aside from coursework I am also active on campus in a variety of facets: I am secretary of the Society of Hispanic Professional Engineers, web developer for Cornell Hyperloop and I participate in Intramural Volleyball and biking club.</p>
+				<hr>
+
+				<h4>Feel free to contact me for inquiries!</h4>
 			</div>
 
 
-			<div id="navigation-bar">
-					<a class="button" href="index">Home</a>
-					<a class="button" href="myWork">My Work</a>
-					<a class="button" href="gallery">Gallery</a>
-					<a class="button" href="resume">Résumé</a>
-
-			</div>
 
 
-			<div id="social-media-bar">
-					<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
-						<img src="images/instagramLogo.svg">
-					</a>
 
-					<a class="social-media-links"	href="https://github.com/luislondono">
-							<img src="images/github.svg">
-					</a>
 
-					<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
-						<img src="images/linkedinLogo.svg">
-					</a>
 
-			</div>
 
 
 
 		</div>
 
-		<div class= "page-title-container">
-			<h1> Welcome
-			</h1>
-		</div>
-
-		<!-- <div class="personal-portrait-1">
-			<img src="images\gallery\luisPortrait.jpg" alt="">
-		</div> -->
-
-
-
-
-	</div>
-
-	<div class= "title-background-image">
-			<img src="images/sasaimaPano.JPG">
-	</div>
-
-	<div class="footer">
-		<div id="cornellBranding">
-			<a href="https://www.cornell.edu/">
-				<img src="images\cornellSealGray.png">
-			</a>
-
-			<a href="https://www.engineering.cornell.edu/">
-				<img src="images\cornellEngineeringLogo.svg">
-			</a>
-		</div>
-		<p> Copyright &copy; 2018 Luis Londono </p>
-	</div>
-
-
-
-
-</body>
-
+	</body>
 </html>
