--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Luis Londono</title>
-		<link rel="stylesheet" href="CSS/main.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body class="page">
 
@@ -30,22 +30,32 @@
 		<div class="page-content">
 
 			<h1>About Me</h1>
-			<div class="portrait-container">
-				<div class="circular-portrait">
-					<img src="images/shpeHeadshot2018.jpg" alt="">
+			<div id="landing-page-container">
+				<div class="portrait-container">
+
+					<div class="circular-portrait">
+						<img src="images/shpeHeadshot2018.jpg" alt="me">
+					</div>
+
+					<!-- <div id="dummy-portrait-padding">
+
+					</div> -->
+
 				</div>
+
+				<div class="aboutme-container">
+					<h3> Welcome to my Website!</h3>
+					<hr>
+					<p> My name is Luis and I am sophomore computer science student at Cornell University with minors in Operations Research and Business. I am interested in mobile & frontend app development and data analytics and I am currently looking for summer internships to explore these interests. </p>
+
+					<p> Aside from coursework I am also active on campus in a variety of facets: I am secretary of the Society of Hispanic Professional Engineers, web developer for Cornell Hyperloop and I participate in Intramural Volleyball and biking club.</p>
+					<hr>
+
+					<h4>Feel free to contact me for inquiries!</h4>
+				</div>
+
 			</div>
 
-			<div class="aboutme-container">
-				<h3> Welcome to my Website!</h3>
-				<hr>
-				<p> My name is Luis and I am sophomore computer science student at Cornell University with minors in Operations Research and Business. I am interested in mobile & frontend app development and data analytics and I am currently looking for summer internships to explore these interests. </p>
-
-				<p> Aside from coursework I am also active on campus in a variety of facets: I am secretary of the Society of Hispanic Professional Engineers, web developer for Cornell Hyperloop and I participate in Intramural Volleyball and biking club.</p>
-				<hr>
-
-				<h4>Feel free to contact me for inquiries!</h4>
-			</div>
 
 
 
