contact me droptab

--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
 
         <nav>
           <ul>
-            <li><a class="nav-link" href="index.html">Home</a></li>
-            <li><a class="nav-link" href="resume.html">Resume</a></li>
-            <li><a class="nav-link" href="team.html">My Work</a></li>
+            <li class="nav-link" ><a href="index.html">Home</a></li>
+            <li class="nav-link"><a href="resume.html">Resume</a></li>
+            <li class="nav-link" ><a  href="team.html">My Work</a></li>
+						<li class="nav-link" id="dropdown-content">Contact Me
+								<a href="#">Facebook</a>
+								<a href="#">Github</a>
+								<a href="#">LinkedIn</a>
+						</li>
 
           </ul>
         </nav>
