--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <nav>
           <ul>
-            <li class="nav-link" ><a href="index.html">Home</a></li>
-            <li class="nav-link"><a href="resume.html">Resume</a></li>
-            <li class="nav-link" ><a  href="team.html">My Work</a></li>
+            <li class="nav-link" ><a href="index">Home</a></li>
+            <li class="nav-link"><a href="resume">Resume</a></li>
+            <li class="nav-link" ><a  href="myWork">My Work</a></li>
 						<li class="nav-link" id="dropdown-content">Gallery
 							<!-- <div class="nav-bar-collapsable-column">
 								<a href="#">Facebook</a>
@@ -26,7 +26,7 @@
 								<a href="#">LinkedIn</a>
 							</div> -->
 						</li>
-						
+
 						<li class="social-media-link" ><a href="https://www.github.com/LuisLondono">  <img src="images/githubLogo.svg" alt=""></a></li>
 						<li class="social-media-link" ><a href="https://www.facebook.com/luislondonoramos"><img src="images/facebookLogo.svg" alt=""></a></li>
 						<li class="social-media-link" ><a href="https://www.linkedin.com/in/luislondonoramos"><img src="images/linkedinLogo.svg" alt=""></a></li>
