--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <nav>
           <ul>
-            <li class="nav-link" ><a href="https://www.luislondono.com">Home</a></li>
+            <li class="nav-link" ><a href="www.luislondono.com">Home</a></li>
             <li class="nav-link"><a href="resume">Resume</a></li>
             <li class="nav-link" ><a  href="myWork">My Work</a></li>
 						<li class="nav-link" id="dropdown-content">Gallery
