--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 		<title>Luis' Resume</title>
 		<link rel="stylesheet" href="css/main.css">
 		<link rel= "shortcut icon" type="image/x-icon" href=
-		"images\cornellicon.ico">
+		"images/cornellicon.ico">
 	</head>
 	<body class="page">
 
