--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>Luis Londono</title>
 		<link rel="stylesheet" href="css/main.css">
 		<link rel= "shortcut icon" type="image/x-icon" href=
-		"images\cornellicon.ico">
-		
+		"images/cornellicon.ico">
+
 	</head>
 	<body class="page">
 
