--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<header>
       <div class="navbar-container">
         <div class="navbar-logo">
-          <a href="index2.html">Luis Hernando Londono</a>
+          <a href="https://luislondono.com/">Luis Hernando Londono</a>
         </div>
 
 
