--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 		<header>
       <div class="navbar-container">
         <div class="navbar-logo">
-          <a href="index2.html">Luis Hernando Londono</a>
+          <a href="https://luislondono.com/">Luis Hernando Londono</a>
         </div>
 
 
