--- a/myWork.html
+++ b/myWork.html
@@ -4,7 +4,8 @@
 	<title>
 		Luis' Work
 	</title>
-	<link rel="stylesheet" type="text/css" href="CSS\styleMine.css">
+	<link rel="stylesheet" type="text/css" href="css\styleMine.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel= "shortcut icon" type="image/x-icon" href=
 	"images\cornellicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -12,47 +13,43 @@
 </head>
 
 
-<body class="webpage">
-	<div class="webpage-content-box">
-		<div class = "header-main">
-
-			<div class="my-logo">
-				Luis Londoño Ramos
+<body class="page">
+	<header>
+		<div class="navbar-container">
+			<div class="navbar-logo">
+				<a href="https://luislondono.com/">Luis Hernando Londono</a>
 			</div>
 
 
-			<div id="navigation-bar">
-					<a class="button" href="index">Home</a>
-					<a class="button" href="myWork">My Work</a>
-					<a class="button" href="gallery">Gallery</a>
-					<a class="button" href="resume">Résumé</a>
+			<nav>
+				<ul>
+					<li class="nav-link" ><a href="https://luislondono.com/">Home</a></li>
+					<li class="nav-link"><a href="resume">Resume</a></li>
+					<li class="nav-link" ><a  href="myWork">My Work</a></li>
+					<li class="nav-link" id="dropdown-content">Gallery
+						<!-- <div class="nav-bar-collapsable-column">
+							<a href="#">Facebook</a>
+							<a href="#">Github</a>
+							<a href="#">LinkedIn</a>
+						</div> -->
+					</li>
+
+					<li class="social-media-link" ><a href="https://www.github.com/LuisLondono">  <img src="images/githubLogo.svg" alt=""></a></li>
+					<li class="social-media-link" ><a href="https://www.facebook.com/luislondonoramos"><img src="images/facebookLogo.svg" alt=""></a></li>
+					<li class="social-media-link" ><a href="https://www.linkedin.com/in/luislondonoramos"><img src="images/linkedinLogo.svg" alt=""></a></li>
+
+				</ul>
+
+			</nav>
 
 			</div>
 
-
-			<div id="social-media-bar">
-					<a class="social-media-links" href="https://www.instagram.com/luislondono.co/?hl=en">
-						<img src="images/instagramLogo.svg">
-					</a>
-
-					<a class="social-media-links"	href="https://github.com/luislondono">
-							<img src="images/github.svg">
-					</a>
-
-					<a class="social-media-links"	href="https://www.linkedin.com/in/luis-londono-873896150/">
-						<img src="images/linkedinLogo.svg">
-					</a>
-
-			</div>
+	</header>
 
 
+	<div class="page-content">
 
-		</div>
-
-		<div class= "page-title-container">
-			<h1> My Work
-			</h1>
-		</div>
+		<h1> My Work</h1>
 
 		<div class= "coursework-container">
 			<h2>Relevant Coursework</h2>
@@ -259,22 +256,6 @@
 
 	</div>
 
-	<div class= "title-background-image">
-			<img src= "images/williardStraightSunset.jpg">
-	</div>
-
-	<div class="footer">
-		<div id="cornellBranding">
-			<a href="https://www.cornell.edu/">
-				<img src="images\cornellSealGray.png">
-			</a>
-
-			<a href="https://www.engineering.cornell.edu/">
-				<img src="images\cornellEngineeringLogo.svg">
-			</a>
-		</div>
-		<p> Copyright &copy; 2018 Luis Londono </p>
-	</div>
 
 
 
