--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="portrait-container">
 
 					<div class="circular-portrait">
-						<img src="images/shpeHeadshot2018.jpg" alt="me">
+						<img src="images/hyperloopHeadshot.JPG" alt="me">
 					</div>
 
 
