fixed broken link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
           <ul>
             <li class="nav-link" ><a href="https://luislondono.com/">Home</a></li>
-            <li class="nav-link"><a href="resume">Resume</a></li>
+            <li class="nav-link"><a href="resume">https://docs.google.com/document/d/1av1XlOl_ZTY2W7YGD1Kn3YUUMBhXLhLa5DjAMa0V2_I/edit?usp=sharing</a></li>
             <li class="nav-link" ><a  href="myWork">My Work</a></li>
 						<li class="nav-link" id="dropdown-content">Gallery
 							<!-- <div class="nav-bar-collapsable-column">
