--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<div class="aboutme-container">
 					<h3> Welcome to my Website!</h3>
 					<hr>
-					<p> My name is Luis and I am sophomore computer science student at Cornell University with minors in Operations Research and Business. </p>
+					<p> My name is Luis and I'm a sophomore computer science student at Cornell University with minors in Operations Research and Business. </p>
 
 					<p> Aside from coursework I am also active on campus in a variety of facets:
 					</p>
