--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</div>
 
 				<div class="aboutme-container">
-					<h3> Welcome to my Website!</h3>
+					<h3> Welcome to my website!</h3>
 					<hr>
 					<p> My name is Luis and I'm a sophomore computer science student at Cornell University with minors in Operations Research and Business. </p>
 
